--- a/main.css
+++ b/main.css
@@ -3,7 +3,12 @@
   width: 25em;
   max-width: 70%;
 }
+
 html {
+  font-family: 'Open Sans', sans-serif;
+}
+
+.splash-container {
   min-height: 100%;
   /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,470000+49,ed6238+100 */
   background: rgb(0,0,0); /* Old browsers */
@@ -13,7 +18,6 @@ html {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ed6238',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   color: white;
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
   padding: 5em 0 0;
 }
 
