--- a/main.css
+++ b/main.css
@@ -1,56 +1,119 @@
-.logo{
-  margin: 3em 0;
-  width: 25em;
-  max-width: 70%;
+html, body {
+  margin: 0;
 }
 
-html {
-  font-family: 'Open Sans', sans-serif;
-}
-
-.splash-container {
-  min-height: 100%;
-  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,470000+49,ed6238+100 */
-  background: rgb(0,0,0); /* Old browsers */
-  background: -moz-linear-gradient(-45deg, rgba(0,0,0,1) 0%, rgba(71,0,0,1) 49%, rgba(237,98,56,1) 100%); /* FF3.6-15 */
-  background: -webkit-linear-gradient(-45deg, rgba(0,0,0,1) 0%,rgba(71,0,0,1) 49%,rgba(237,98,56,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(135deg, rgba(0,0,0,1) 0%,rgba(71,0,0,1) 49%,rgba(237,98,56,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#ed6238',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  color: white;
-  text-align: center;
-  padding: 5em 0 0;
+* {
+  box-sizing: border-box;
 }
 
 body {
-  height: 100%;
-}
-.content-container {
-  text-align: center;
-}
-
-.splash-section {
-  width: 40%;
-  border: 2px solid rgba(255, 255, 255, 0.3);
-  border-radius: 5px;
-  text-align: left;
-  margin: 1em;
-  box-sizing: border-box;
-  padding: 1em;
-  display: inline-block;
-  vertical-align: top;
+  color: #1B1B1B;
+  background-color: #FAFAFA;
+  font-family: 'Open Sans';
 }
 
-.splash-section h2 {
-  font-family: 'Bitter', serif;
+.clearfix:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
 a {
   color: inherit;
-  font-style: italic;
+}
+.site-header {
+  text-align: center;
+  padding: 5em;
+  background-color: white;
 }
 
-@media screen and (max-width: 800px) {
-  .splash-section {
-    width: 80%;
-  }
+.header-logo {
+  max-height: 5em;
+  max-width: 80%;
+  /*transform: rotate(-2deg);*/
 }
+
+.banner {
+  background-color: #FAC127;
+  text-align: center;
+  padding: 1em;
+  color: black;
+}
+
+.mono {
+  font-family: 'Cousine';
+}
+
+.center {
+  text-align: center;
+}
+
+.subtitle {
+  margin: 0.2em;
+  color: #999999;
+  font-size: 1.4em;
+  font-weight: 200;
+}
+
+section {
+  max-width: 35em;
+  margin: 2em auto;
+  line-height: 1.6em;
+  padding: 2em;
+}
+
+.section-title {
+  font-size: 2.5em;
+  margin-bottom: 0.6em;
+}
+
+.hero {
+  background-color: #223643;
+  color: #EBE7D9;
+  padding: 2em;
+}
+
+.hero-content {
+  width: 100%;
+  max-width: 40em;
+  margin: 0 auto;
+  text-align: left;
+}
+
+.hero-content img {
+  max-width: 70%;
+  display: block;
+  margin: 0 auto;
+}
+
+.featured {
+}
+
+.featured-image {
+  float: left;
+  width: 30%;
+  /*background-color: #CD238A;*/
+
+  /* TODO: Remove */
+  height: 80px;
+}
+
+.featured-image img {
+  width: 100%;
+}
+.featured-text {
+  float: left;
+  width: 70%;
+  padding: 0.3em 0.8em;
+}
+
+/*.body-container {
+  width: calc(100% - 20em);
+}*/
+
+/*section:nth-child(2n) {
+  text-align: right;
+}
+section:nth-child(2n) .section-title {
+  text-align: right;
+}*/
