Minor updates for Easter term

--- a/main.css
+++ b/main.css
@@ -68,8 +68,8 @@ section {
 }
 
 .hero {
-  background-color: #223643;
-  color: #EBE7D9;
+  background-color: #0F0063;
+  color: white;
   padding: 2em;
 }
 
